--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -79,7 +79,7 @@
                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
             </div><div>
                 <img src="../img/gimnasio_aerea.jpg" alt="gimnasio">
-                   <h3>Gimansio</h3>
+                   <h3>Gimnasio</h3>
                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
             </div><div>
                 <img src="../img/interior_social.png" alt="Salón social">
