--- a/index.html
+++ b/index.html
@@ -1,63 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Arteha-Lab</title>
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--link rel="stylesheet" href="./css/style.css"-->
+  <link rel="stylesheet" href="./css/estilos.css">
+  <title>Arteha-Lab</title>
+
 </head>
+
 <body>
-    <div class="fondo">
-        <header>
-            <a href="./index.html"><img src="./img/logo-arteha.png" alt="Logo Arteha"></a>
-            <nav class="navbar navbar-expand-lg ">
-                <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/publicaciones.html">Publicaciones</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/equipo.html">Equipo</a>
-                      </li>
-                    </ul>
-                    <span class="navbar-text">
-                    </span>
-                  </div>
-                </div>
-              </nav>
-        </header>
+  <div class="fondo">
+    <header>
+      <a href="./index.html"><img src="./img/logo-arteha.png" alt="Logo Arteha"></a>
+      <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/publicaciones.html">Publicaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/equipo.html">Equipo</a>
+              </li>
+            </ul>
+            <span class="navbar-text">
+            </span>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
-        <section class="hero">
-            <h1>Laboratorio de Arquitectura, Tecnología y hábitat</h1>
-        </section>
+      <section class="hero">
+        <h1>Laboratorio de Arquitectura, Tecnología y Hábitat</h1>
+      </section>
     </main>
     <footer class="pie_de_pagina">
-        <div>
-            <h2>Arteha Lab<h2>
+      <div>
+        <h2>Arteha Lab<h2>
             <p>2024 <br>
-            Medellín - Colombia<p>
+              Medellín - Colombia
+            <p>
             <p> Diseñado por Sofoco Estudio</p>
-        </div>
-        <div>
-        <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="./img/logotipo-de-instagram.png" alt=" Logotipo instagram"></a>
-        </div>
-    </footer> 
-    </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </div>
+      <div>
+        <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="./img/logotipo-de-instagram.png"
+            alt=" Logotipo instagram"></a>
+      </div>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
