--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!--link rel="stylesheet" href="../css/style.css"-->
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Equipo</title>
     
 </head>
@@ -42,7 +43,7 @@
     </header>
     <main class="equipo">
         <section class="oficina">
-            <h2> Nuestra oficina</h2>
+            <h1> Nuestra oficina</h1>
             <div>                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdam Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdam</p>
                 <img src="../img/grupo-arteha.png" alt="Fotografía oficina Arteha">
@@ -88,7 +89,7 @@
             </div>
         </section>
     </main>
-    <footer class="pie_de_pagina_pr">
+    <footer class="pie_de_pagina_p">
         <div>
             <h2>Arteha Lab<h2>
             <p>2024 <br>
