--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,106 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Proyectos</title>
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--link rel="stylesheet" href="../css/style.css"-->
+  <link rel="stylesheet" href="../css/estilos.css">
+  <title>Proyectos</title>
+
 </head>
+
 <body>
-    <header id="header"> 
-        <a href="../index.html"><img src="../img/logo-arteha.png" alt="Logo Arteha"></a>
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./publicaciones.html">Publicaciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./equipo.html">Equipo</a>
-                  </li>
-                </ul>
-                <span class="navbar-text">
-                </span>
-              </div>
-            </div>
-          </nav>
-
-    </header>
-    <main class="general_proyectos">
-        <section class="proyectos">
-            <div>
-             <img src="../img/coworking_interior.jpg" alt="Render interior coworking">
-                <h3>coworking</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-            <div>
-                <img src="../img/casa_vital.png" alt="Render casa vital">
-                   <h3>Casa vital</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-            <div>
-                <img src="../img/conejera.png" alt="Render conejera">
-                   <h3>Hábitat para Conejos</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-            <div>
-                <img src="../img/glamping-1.png" alt="Glamping 1 Santa Elena">
-                   <h3>Glamping Santa Elena</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-            <div>
-                <img src="../img/glamping-2.png" alt="Glamping 2 Santa Elena">
-                   <h3>Glamping Santa Elena</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-            <div>
-                <img src="../img/render_l_y_a_2.png" alt="Render casa Leo y Andrea">
-                   <h3>Casa de campo</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-            <div>
-                <img src="../img/exterior_capilla.png" alt="Render Capilla">
-                   <h3>Capilla</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div><div>
-                <img src="../img/gimnasio_aerea.jpg" alt="gimnasio">
-                   <h3>Gimnasio</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div><div>
-                <img src="../img/interior_social.png" alt="Salón social">
-                   <h3>Salón social</h3>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
-            </div>
-
-        </section>
-    </main>
-    <footer class="pie_de_pagina_pr">
-        <div>
-            <h2>Arteha Lab<h2>
-            <p>2024 <br>
-            Medellín - Colombia<p>
-            <p> Diseñado por Sofoco Estudio</p>
+  <header id="header">
+    <a href="../index.html"><img src="../img/logo-arteha.png" alt="Logo Arteha"></a>
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./proyectos.html">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./publicaciones.html">Publicaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./equipo.html">Equipo</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+          </span>
         </div>
-        <div>
-            <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="../img/logotipo-de-instagram.png" alt=" Logotipo instagram"></a>
-            <a href="#header"> <img src="../img/flecha-hacia-arriba.png" alt="Ir al comienzo de esta página"></a>
-        </div>
-    </footer>  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </div>
+    </nav>
+
+  </header>
+  <main class="general_proyectos">
+    <section class="proyectos">
+      <div>
+        <img src="../img/coworking_interior.jpg" alt="Render interior coworking">
+        <h3>coworking</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/casa_vital.png" alt="Render casa vital">
+        <h3>Casa vital</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/conejera.png" alt="Render conejera">
+        <h3>Hábitat para Conejos</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/glamping-1.png" alt="Glamping 1 Santa Elena">
+        <h3>Glamping Santa Elena</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/glamping-2.png" alt="Glamping 2 Santa Elena">
+        <h3>Glamping Santa Elena</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/render_l_y_a_2.png" alt="Render casa Leo y Andrea">
+        <h3>Casa de campo</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/exterior_capilla.png" alt="Render Capilla">
+        <h3>Capilla</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/gimnasio_aerea.jpg" alt="gimnasio">
+        <h3>Gimnasio</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+      <div>
+        <img src="../img/interior_social.png" alt="Salón social">
+        <h3>Salón social</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+      </div>
+
+    </section>
+  </main>
+  <footer class="pie_de_pagina_pr">
+    <div>
+      <h2>Arteha Lab<h2>
+          <p>2024 <br>
+            Medellín - Colombia
+          <p>
+          <p> Diseñado por Sofoco Estudio</p>
+    </div>
+    <div>
+      <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="../img/logotipo-de-instagram.png"
+          alt=" Logotipo instagram"></a>
+      <a href="#header"> <img src="../img/flecha-hacia-arriba.png" alt="Ir al comienzo de esta página"></a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
