--- a/pages/publicaciones.html
+++ b/pages/publicaciones.html
@@ -1,105 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Publicaciones</title>
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--link rel="stylesheet" href="../css/style.css"-->
+  <link rel="stylesheet" href="../css/estilos.css">
+  <title>Publicaciones</title>
+
 </head>
+
 <body>
-    <header> 
-        <a href="../index.html"><img src="../img/logo-arteha.png" alt="Logo Arteha"></a>
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./publicaciones.html">Publicaciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./equipo.html">Equipo</a>
-                  </li>
-                </ul>
-                <span class="navbar-text">
-                </span>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="publicaciones">
-        <section>
-            <h2> Conferencias</h2>
-            <div>
-               <h3> Territorios Inteligentes Universidad Luis Amigó</h3> 
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum. Reiciendis adipisci architecto iure eos!
-               Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
-               Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque doloribus sunt. Repellendus, ea?
-               Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum neque iusto sint accusantium autem.</p>
-            </div>
-            <div>
-                <h3> Habitar en los contextos del proceso de desmovilización</h3> 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum. Reiciendis adipisci architecto iure eos!
-                Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
-                Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque doloribus sunt. Repellendus, ea?
-                Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum neque iusto sint accusantium autem.</p>
-             </div>
-             <div>
-                <h3> Cambio climático</h3> 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum. Reiciendis adipisci architecto iure eos!
-                Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
-                Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque doloribus sunt. Repellendus, ea?
-                Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum neque iusto sint accusantium autem.</p>
-             </div>
-        </section>
-        <section>
-        <h2> Publicaciones</h2>
-        <div>
-            <h3> Habitar la guerra. ISSN 1526584</h3> 
-            <p>Breve resúmen Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum. Reiciendis adipisci architecto iure eos!
-            Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
-            Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque doloribus sunt. Repellendus, ea?
-            Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum neque iusto sint accusantium autem.</p>
-         </div>
-         <div>
-            <h3> Plataformas para la gestión del cambio climático</h3> 
-            <p> Breve resúmen Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum. Reiciendis adipisci architecto iure eos!
-            Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
-            Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque doloribus sunt. Repellendus, ea?
-            Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum neque iusto sint accusantium autem.</p>
-         </div>
-         <div>
-            <h3> Financiación del cambio climático en escenarios de cambio. ISSN 4313431</h3> 
-            <p> Breve resúmen Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum. Reiciendis adipisci architecto iure eos!
-            Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
-            Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque doloribus sunt. Repellendus, ea?
-            Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum neque iusto sint accusantium autem.</p>
-         </div>
-        
-        </section>
-    </main>
-    <footer class="pie_de_pagina_pr">
-        <div>
-            <h2>Arteha Lab<h2>
-            <p>2024 <br>
-            Medellín - Colombia<p>
-            <p> Diseñado por Sofoco Estudio</p>
+  <header>
+    <a href="../index.html"><img src="../img/logo-arteha.png" alt="Logo Arteha"></a>
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./proyectos.html">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./publicaciones.html">Publicaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./equipo.html">Equipo</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+          </span>
         </div>
-            <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="../img/logotipo-de-instagram.png" alt=" Logotipo instagram"></a>
-    </footer>     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </div>
+    </nav>
+  </header>
+  <main class="publicaciones">
+    <section>
+      <h2> Conferencias</h2>
+      <div>
+        <h3> Territorios Inteligentes Universidad Luis Amigó</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum.
+          Reiciendis adipisci architecto iure eos!
+          Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error
+          voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
+          Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque
+          doloribus sunt. Repellendus, ea?
+          Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum
+          neque iusto sint accusantium autem.</p>
+      </div>
+      <div>
+        <h3> Habitar en los contextos del proceso de desmovilización</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum.
+          Reiciendis adipisci architecto iure eos!
+          Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error
+          voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
+          Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque
+          doloribus sunt. Repellendus, ea?
+          Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum
+          neque iusto sint accusantium autem.</p>
+      </div>
+      <div>
+        <h3> Cambio climático</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur error laborum.
+          Reiciendis adipisci architecto iure eos!
+          Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error
+          voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
+          Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque
+          doloribus sunt. Repellendus, ea?
+          Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum
+          neque iusto sint accusantium autem.</p>
+      </div>
+    </section>
+    <section>
+      <h2> Publicaciones</h2>
+      <div>
+        <h3> Habitar la guerra. ISSN 1526584</h3>
+        <p>Breve resúmen Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur
+          error laborum. Reiciendis adipisci architecto iure eos!
+          Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error
+          voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
+          Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque
+          doloribus sunt. Repellendus, ea?
+          Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum
+          neque iusto sint accusantium autem.</p>
+      </div>
+      <div>
+        <h3> Plataformas para la gestión del cambio climático</h3>
+        <p> Breve resúmen Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur
+          error laborum. Reiciendis adipisci architecto iure eos!
+          Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error
+          voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
+          Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque
+          doloribus sunt. Repellendus, ea?
+          Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum
+          neque iusto sint accusantium autem.</p>
+      </div>
+      <div>
+        <h3> Financiación del cambio climático en escenarios de cambio. ISSN 4313431</h3>
+        <p> Breve resúmen Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus maxime porro tenetur
+          error laborum. Reiciendis adipisci architecto iure eos!
+          Itaque voluptates necessitatibus accusantium, tempore harum dignissimos quas pariatur! Praesentium error
+          voluptatibus autem doloribus aperiam tempora, at obcaecati saepe quasi!
+          Dolorum, nobis? At nemo, minus adipisci ab porro tenetur expedita dolorem earum, iusto ducimus, minima itaque
+          doloribus sunt. Repellendus, ea?
+          Vero id vel saepe cumque corrupti adipisci tenetur ducimus dolorum possimus amet voluptatibus labore, ipsum
+          neque iusto sint accusantium autem.</p>
+      </div>
+
+    </section>
+  </main>
+  <footer class="pie_de_pagina_p">
+    <div>
+      <h2>Arteha Lab<h2>
+          <p>2024 <br>
+            Medellín - Colombia
+          <p>
+          <p> Diseñado por Sofoco Estudio</p>
+    </div>
+    <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="../img/logotipo-de-instagram.png"
+        alt=" Logotipo instagram"></a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
