--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -51,47 +51,47 @@
       <div>
         <img src="../img/coworking_interior.jpg" alt="Render interior coworking">
         <h3>coworking</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Espacio funcional y moderno diseñado para fomentar creatividad, colaboración y productividad en ambientes inspiradores.</p>
       </div>
       <div>
         <img src="../img/casa_vital.png" alt="Render casa vital">
         <h3>Casa vital</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Vivienda para adultos mayores, enfocada en bienestar, accesibilidad, seguridad y conexión con la naturaleza.</p>
       </div>
       <div>
         <img src="../img/conejera.png" alt="Render conejera">
         <h3>Hábitat para Conejos</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Diseño sostenible que prioriza bienestar animal, integrando áreas verdes y materiales respetuosos con el medio ambiente.</p>
       </div>
       <div>
         <img src="../img/glamping-1.png" alt="Glamping 1 Santa Elena">
         <h3>Glamping Santa Elena</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Experiencia de lujo al aire libre, combinando diseño exclusivo con confort en entornos naturales.</p>
       </div>
       <div>
         <img src="../img/glamping-2.png" alt="Glamping 2 Santa Elena">
         <h3>Glamping Santa Elena</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Refugio ecológico único que fusiona arquitectura contemporánea con paisajes naturales.</p>
       </div>
       <div>
         <img src="../img/render_l_y_a_2.png" alt="Render casa Leo y Andrea">
         <h3>Casa de campo</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Refugio acogedor en entorno rural, destacando confort, funcionalidad y conexión con la naturaleza.</p>
       </div>
       <div>
         <img src="../img/exterior_capilla.png" alt="Render Capilla">
         <h3>Capilla</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Lugar espiritual con diseño minimalista, atmósfera íntima y elementos arquitectónicos que evocan serenidad</p>
       </div>
       <div>
         <img src="../img/gimnasio_aerea.jpg" alt="gimnasio">
         <h3>Gimnasio</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Instalación moderna, equipada con tecnología avanzada, diseñada para potenciar salud, rendimiento y bienestar integral.</p>
       </div>
       <div>
         <img src="../img/interior_social.png" alt="Salón social">
         <h3>Salón social</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos totam</p>
+        <p>Espacio versátil y elegante, ideal para eventos, con diseño funcional que fomenta interacción y convivencia.</p>
       </div>
 
     </section>
