--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -1,103 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--link rel="stylesheet" href="../css/style.css"-->
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Equipo</title>
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--link rel="stylesheet" href="../css/style.css"-->
+  <link rel="stylesheet" href="../css/estilos.css">
+  <title>Equipo</title>
+
 </head>
+
 <body>
-    <header> 
-        <a href="../index.html"><img src="../img/logo-arteha.png" alt="Logo Arteha"></a>
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./publicaciones.html">Publicaciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./equipo.html">Equipo</a>
-                  </li>
-                </ul>
-                <span class="navbar-text">
-                </span>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="equipo">
-        <section class="oficina">
-            <h1> Nuestra oficina</h1>
-            <div>                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdam Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdamLorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quasi ducimus odio amet quos at nesciunt commodi dignissimos unde harum aliquid optio quibusdam</p>
-                <img src="../img/grupo-arteha.png" alt="Fotografía oficina Arteha">
-            </div>
-        </section>
-        <section class="profesionales">
-            <h2> Nuestros profesionales</h2>
-            <div>
-                <div>
-                    <h3> Arquitecto. Daniel Vallejo Soto</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem</p>
-                </div>
-                <img src="../img/arquitecto-1.png" alt="Fotografía Daniel Vallejo Soto">
-            </div>
-            <div>
-                <div>
-                    <h3> Arquitecto. Julián David López Sánchez</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem </p>
-                </div>
-                    <img src="../img/arquitecto-2.png" alt="Fotografía Julián David López Sánchez">
-                
-            </div>
-            <div>
-                <div>
-                    <h3> Ingeniero Simón Calad Fernández</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem </p>
-                </div>
-                <img src="../img/personal-3.jpg" alt="Fotografía Simón Calad Fernández">
-            </div>
-            <div>
-                <div>
-                    <h3>Ingeniero Juan Pablo Macías</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem </p>
-                </div>
-                <img src="../img/personal 4.jpg" alt="Fotografía Juan Pablo Macías">
-            </div>
-            <div>
-                <div>
-                    <h3>Arquitecto Constructor. Ricardo Benavides</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidemLorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi consequatur qui natus recusandae nulla eius ea hic illum officiis repellendus quidem </p>
-                </div>
-                <img src="../img/personal-5.jpg" alt="Fotografía Ricardo Benavides">
-            </div>
-        </section>
-    </main>
-    <footer class="pie_de_pagina_p">
-        <div>
-            <h2>Arteha Lab<h2>
-            <p>2024 <br>
-            Medellín - Colombia<p>
-            <p> Diseñado por Sofoco Estudio</p>
+  <header>
+    <a href="../index.html"><img src="../img/logo-arteha.png" alt="Logo Arteha"></a>
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./proyectos.html">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./publicaciones.html">Publicaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./equipo.html">Equipo</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+          </span>
         </div>
-        <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="../img/logotipo-de-instagram.png" alt=" Logotipo instagram"></a>
-    </footer> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
+      </div>
+    </nav>
+  </header>
+  <main class="equipo">
+    <section class="oficina">
+      <h1> Nuestra oficina</h1>
+      <div>
+        <p> Fundada en 2021, nuestra oficina nació con la visión de transformar espacios mediante la combinación de
+          arquitectura, tecnología y un profundo respeto por el hábitat. Desde nuestros inicios, hemos trabajado en
+          crear proyectos que no solo sean funcionales, sino que también conecten a las personas con su entorno,
+          fomentando una relación sostenible entre lo construido y la naturaleza. <br>
+          A lo largo de estos años, hemos diseñado espacios que abarcan desde coworkings, viviendas para adultos
+          mayores hasta refugios ecológicos, eco parcelaciones y hábitats para animales, siempre priorizando la
+          innovación y la
+          sensibilidad hacia las necesidades humanas y ambientales.<br>
+          Nuestra oficina se enorgullece de colaborar con un equipo multidisciplinario comprometido con la excelencia,
+          creando soluciones personalizadas que responden a los retos del presente y vislumbran un futuro más armónico.
+        </p>
+        <img src="../img/grupo-arteha.png" alt="Fotografía oficina Arteha">
+      </div>
+    </section>
+    <section class="profesionales">
+      <h2> Nuestros profesionales</h2>
+      <div>
+        <div>
+          <h3> Arquitecto. Daniel Vallejo Soto</h3>
+          <p>Con amplia experiencia en diseño arquitectónico, Daniel se especializa en la creación
+            de espacios funcionales y sostenibles. Apasionado por la integración de tecnología y arquitectura, su
+            enfoque se centra en soluciones innovadoras que mejoren la calidad de vida. Egresado de la Universidad
+            Nacional de Colombia se enfoca en la integración de nuevas tecnologías a la comprensión territorial.</p>
+        </div>
+        <img src="../img/arquitecto-1.png" alt="Fotografía Daniel Vallejo Soto">
+      </div>
+      <div>
+        <div>
+          <h3> Arquitecto. Julián David López Sánchez</h3>
+          <p> Julián es un arquitecto visionario con un enfoque en la relación entre diseño y
+            hábitat. Con experiencia en proyectos, como viviendas, comerciales, industria de alimentos y diseño de
+            viviendas, su trabajo combina creatividad y sensibilidad hacia el entorno natural. Sumado a esto se empeña
+            como docentes en diversas
+            universidaddes de la ciudad de Medellín.</p>
+        </div>
+        <img src="../img/arquitecto-2.png" alt="Fotografía Julián David López Sánchez">
+
+      </div>
+      <div>
+        <div>
+          <h3> Ingeniero Simón Calad Fernández</h3>
+          <p>Especialista en estructuras, Simón Calad garantiza la solidez y seguridad de cada proyecto.
+            Con experiencia en obras de infraestructura, edificios residenciales e industriales, su enfoque técnico
+            asegura el cumplimiento de los más altos estándares de calidad. Actualmente se encuentra desarrollando la
+            especialización en geotecnia en la Universidad Nacional de Colombia.</p>
+        </div>
+        <img src="../img/personal-3.jpg" alt="Fotografía Simón Calad Fernández">
+      </div>
+      <div>
+        <div>
+          <h3>Ingeniero Juan Pablo Macías</h3>
+          <p>Juan Pablo, aporta una visión estratégica en la planeación y ejecución de proyectos. Con
+            experiencia en control de costos, supervisión y gestión de obras, su objetivo es optimizar procesos
+            constructivos sin comprometer la excelencia.</p>
+        </div>
+        <img src="../img/personal 4.jpg" alt="Fotografía Juan Pablo Macías">
+      </div>
+      <div>
+        <div>
+          <h3>Arquitecto Constructor. Ricardo Benavides</h3>
+          <p>Con habilidades técnicas y creativas, Ricardo se especializa en la ejecución de
+            proyectos arquitectónicos. Su experiencia en acabados, supervisión y diseño
+            constructivo le permite traducir ideas en realidades tangibles. Actualmente se desempeña como profesor de la carrera de construcción de la Universidad Nacional de Colombia sede Medellín.</p>
+        </div>
+        <img src="../img/personal-5.jpg" alt="Fotografía Ricardo Benavides">
+      </div>
+    </section>
+  </main>
+  <footer class="pie_de_pagina_p">
+    <div>
+      <h2>Arteha Lab<h2>
+          <p>2024 <br>
+            Medellín - Colombia
+          <p>
+          <p> Diseñado por Sofoco Estudio</p>
+    </div>
+    <a href="https://www.instagram.com/artehalab/" target="_blank"><img src="../img/logotipo-de-instagram.png"
+        alt=" Logotipo instagram"></a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
